Fixed more Practice Screens comments